--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "bmi-calculator",
-  "version": "1.0.0",
-  "description": "![Design preview for the Body Mass Index Calculator coding challenge](./preview.jpg)",
-  "main": "index.js",
-  "scripts": {
-    "dev": "vite --host",
-    "build": "vite build"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
-    "sass-embedded": "^1.78.0",
-    "tailwindcss": "^3.4.11",
-    "vite": "^5.4.6"
-  }
+    "name": "bmi-calculator",
+    "version": "1.0.0",
+    "description": "![Design preview for the Body Mass Index Calculator coding challenge](./preview.jpg)",
+    "main": "index.js",
+    "scripts": {
+        "dev": "vite --host",
+        "build": "vite build",
+        "start": "npm run dev"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.47",
+        "sass-embedded": "^1.78.0",
+        "tailwindcss": "^3.4.11",
+        "vite": "^5.4.6"
+    }
 }
